--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,5 @@ dependencies {
   implementation(platform("com.squareup.okhttp3:okhttp-bom:4.9.1"))
   implementation("com.squareup.okhttp3:okhttp")
   implementation("com.squareup.okhttp3:logging-interceptor")
+  implementation "org.jetbrains.kotlin:kotlin-script-runtime:1.4.10"
 }
